syntax="proto3";
package proto;
option go_package="./;client";

import "google/protobuf/empty.proto";

service OutletLocationPangkalan {
    // mst_location_type
    rpc CreateLocationTypePangkalan (CreateLocationTypePangkalanRequest) returns (CreateLocationTypePangkalanResponse);
    rpc GetLocationTypePangkalan (google.protobuf.Empty) returns (GetLocationTypePangkalanResponse);
    rpc GetLocationTypePangkalanById (GetLocationTypePangkalanByIdRequest) returns (GetLocationTypePangkalanByIdResponse);
    // mst_location...
    rpc CreateLocationPangkalan (CreateLocationPangkalanRequest) returns (CreateLocationPangkalanResponse);
    rpc GetLocationsPangkalan (google.protobuf.Empty) returns (GetLocationsPangkalanResponse);
    rpc GetLocationPangkalanById (GetLocationPangkalanByIdRequest) returns (GetLocationPangkalanByIdResponse);
    // mst_sub_location...
    rpc CreateSubLocationPangakalan (CreateSubLocationPangkalanRequest) returns (CreateSubLocationPangkalanResponse);
    rpc GetSubLocationPangkalanById (GetSubLocationPangkalanByIdRequest) returns (GetSubLocationPangkalanByIdResponse);
    rpc GetSubLocationPangkalanByLocation (GetSubLocationPangkalanByLocationReq) returns (GetSubLocationPangkalanByLocationResp);
    rpc GetSubLocationsPangkalan(google.protobuf.Empty) returns (GetSubLocationsPangkalanResponse);
    rpc UpdateBufferSubLocationPangkalan(RequestUpdateBufferPangkalan) returns (ResponseUpdateBufferPangkalan);
    rpc GetBuffersPangkalan(google.protobuf.Empty) returns (ResponseGetBuffersPangkalan);
    rpc UpdateLocationPangkalan(RequestUpdateLocationPangkalan) returns (ResponseUpdateLocationPangkalan);
    rpc UpdateSubLocationPangkalan(RequestUpdateSubLocationPangkalan) returns (ResponseUpdateSubLocationPangkalan);

    // GetLocationByHashedId...
    rpc GetLocationPangkalanByHashedId    (GetLocationPangkalanByHashedIdRequest) returns (GetLocationPangkalanByHashedIdResponse);
    rpc GetSubLocationPangkalanByHashedId (GetSubLocationPangkalanByHashedIdRequest) returns (GetSubLocationPangkalanByHashedIdResponse);
    rpc OperationalTimePangkalan(RequestOperationalTimePangkalan) returns(ResponseOperationalTimePangkalan);
    rpc GetLocationPangkalanQrCode(RequestGetLocationPangkalanQrCode) returns(ResponseGetLocationPangkalanQrCode);
}

// ActionType...
enum ActionTypePangkalan {
    ADD_OPERATIONAL_TIME_PANGKALAN     = 0;
    UPDATE_OPERATIONAL_TIME_PANGKALAN  = 1;
    GET_ALL_OPERATIONAL_TIME_PANGKALAN = 2;
}

// BDO 805....
message OperationalTimePangkalanItem {
    int64  id = 1;
    string operational_time = 2;
    string description = 3;
}
message RequestOperationalTimePangkalan {
    int64  id = 1;
    string operational_time = 2;
    string description = 3;
    ActionTypePangkalan action_type = 4;
}
message ResponseOperationalTimePangkalan {
    string   message = 1;
    repeated OperationalTimePangkalanItem operational_time = 2;
}

// BDO 781 Show hide location
message RequestUpdateSubLocationPangkalan {
    int64  id = 1;
    string sub_location_name = 2;
    string prefix = 3;
    bool   have_qr = 4;
}
message ResponseUpdateSubLocationPangkalan{
    string  message = 1;
    string  modified_at = 2;
    string  hashed_id = 3;
}

// BDO 537...
message RequestUpdateLocationPangkalan {
    int64  id=1;
    string location_name=2;
    int32  is_active=3;
    string code_area =4;
    float  lat = 5;
    float  long = 6;
    string address  = 7;
    int64 operational_time = 8;
}

message ResponseUpdateLocationPangkalan {
    string message = 1;
}

// GetSubLocationsResponse...
message GetSubLocationsPangkalanItem {
	int64  location_id = 1;
	string location_name = 2;
	string sub_location_name = 3;
	int64  sub_location_id = 4;
	string area_code = 5;
    string prefix = 6;
    string operational_time = 7;
    bool   is_deposition = 8;
    bool   have_deposition = 9;
}
message GetSubLocationsPangkalanResponse {
	repeated GetSubLocationsPangkalanItem sub_locations = 1;
}
// mst_sub_location
message GetSubLocationPangkalanByIdRequest {
    int64 id=1;
}

message GetSubLocationPangkalanByIdResponse {
    int64  id=1;
    string sub_location_name =2;
    int64  location_id=3;
    int64  pengendapan_location_id=4;
    int64  location_type_id =5;
    int32  has_queue_system=6;
    int32  has_pengendapan=7;
    int32  ble=8;
    int32  geo_fence=9;
    int32  is_active=10;
    string created_at=11;
    string modified_at=12;
    int64  created_by=13;
    int64  modified_by=14;
    CreateLocationTypePangkalanRequest LocationType=15;
    string prefix = 16;
    int64  buffer = 17;
    string qr_code = 18;
}

message CreateSubLocationPangkalanRequest {
    int64  id=1;
    string sub_location_name =2;
    int64  location_id=3;
    int64  pengendapan_location_id=4;
    int64  location_type_id =5;
    int32  has_queue_system=6;
    int32  has_pengendapan=7;
    int32  ble=8;
    int32  geo_fence=9;
    int32  is_active=10;
    string created_at=11;
    string modified_at=12;
    int64  created_by=13;
    int64  modified_by=14;
    string prefix = 15;
    int64  buffer = 16;
}

message CreateSubLocationPangkalanResponse {
    int64 id=1;
}

// mst_location...
message GetLocationPangkalanByIdRequest {
    int64 location_id=1;
}

message GetLocationPangkalanByIdResponse {
    CreateLocationPangkalanRequest location=1; 
}

message GetLocationsPangkalanResponse {
    repeated CreateLocationPangkalanRequest list_locations =1;
}

message CreateLocationPangkalanRequest {
    int64  id=1;
    string location_name=2;
    int32  is_active=3;
    string created_at=4;
    string modified_at=5;
    int64  created_by=6;
    int64  modified_by=7;
    string code_area = 8;
    float  lat = 9;
    float  long = 10;
    string address  = 11;
    int64  operation_time = 12;
}

message CreateLocationPangkalanResponse {
    int64 id=1;
    string location_name=2;
    string created_at=3;
    string modified_at=5;
    string code_area = 6;
}

//  mst_location_type
message GetLocationTypePangkalanByIdRequest {
    int64 id=1;
}

message GetLocationTypePangkalanByIdResponse {
    CreateLocationTypePangkalanRequest location_type=1;
}

message CreateLocationTypePangkalanRequest {
    int64   id=1;
    string  location_type_name=2;
    int64   created_by=3;
    int64   modified_by=4;
    string created_at=5;
    string  modified_at=6;
    int32   is_deposition=7;
}

message CreateLocationTypePangkalanResponse {
    int64   id=1;
    string  location_type_name=2;
    int32   is_deposition=3;
}

message GetLocationTypePangkalanResponse {
    repeated CreateLocationTypePangkalanRequest LocationTypes = 1;
}

// [BDO 124] GetSubLocationByLocation....
message GetSubLocationPangkalanByLocationReq {
    int64 location_id = 1;
}
message SubLocationPangkalanItems {
    int64  sub_location_id=1;
    string sub_location_name=2;
    string sub_location_type=3;
    bool   is_deposistion = 4;
    string prefix = 5;
    bool   have_pengedapan = 6;
    int64  id_pengendapan = 7;
}
message GetSubLocationPangkalanByLocationResp {
    int64   location_id=1;
    string  location_name=2;
    repeated SubLocationPangkalanItems sub_location_list = 3;
    string  code_are = 4;
}

message RequestUpdateBufferPangkalan {
    int64 sub_location_id = 1;
    int64 value = 2;
}
message ResponseUpdateBufferPangkalan {
    string message = 1;
}

message BufferItemPangkalan {
    int64 sub_location_id = 1;
    int64 value = 2;
}
message ResponseGetBuffersPangkalan {
    repeated BufferItemPangkalan sub_location_buffer = 1;
}

message GetLocationPangkalanByHashedIdRequest {
    string hashed_id = 1;
}
message GetLocationPangkalanByHashedIdResponse {
    CreateLocationPangkalanRequest location=1;    
}
message GetSubLocationPangkalanByHashedIdRequest {
    string hashed_id = 1;   
}
message GetSubLocationPangkalanByHashedIdResponse{
    GetSubLocationsPangkalanItem sub_location = 1;
}

// BDO 823...
message RequestGetLocationPangkalanQrCode {
    int64 sub_location_id = 1;
}
message ResponseGetLocationPangkalanQrCode {
    int64  sub_location_id = 1;
    int64  location_id = 2;
    string sub_location_name = 3;
    string da_qr_code = 4;
    string queue_passanger_qr_code = 5;
}